Refactor CORS: Make allowed origins dynamic via ALLOWED_ORIGINS env var